# AoC

./: .gitignore
2018/: .pylintrc  1.py  10.py  11.py  12.py  12.y  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  test.py
2020/: 1.go  10.go  11.go  12.go  13.go  14.go  15.go  16.go  17.go  17_2.go  18.go  19.go  2.go  20.go  21.go  22.go  23.go  24.go  25.go  3.go  4.go  5.go  6.go  7.go  8.go  9.go
2021/: .merlin  .ocamlinit  1.ml  2.ml  3.ml  4.ml  5.ml  6.ml  7.ml  8.ml  9.ml  dune
