(executable
 (name 1)
 (modules 1)
 (libraries core)
)

(executable
 (name 2)
 (modules 2)
 (libraries core)
)

(executable
 (name 3)
 (modules 3)
 (libraries core)
)

(executable
 (name 5)
 (modules 5)
 (libraries core)
)

(executable
 (name 6)
 (modules 6)
 (libraries core)
)

(executable
 (name 7)
 (modules 7)
 (libraries core)
)

(executable
 (name 8)
 (modules 8)
 (libraries core)
)
